# BriefMarker

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  stamps_index.faiss
static/: index.html
